Bug 171187 - block selection crashes konsole
Summary: block selection crashes konsole
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-17 00:15 UTC by Matthew Woehlke
Modified: 2008-09-22 22:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Woehlke 2008-09-17 00:15:23 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Block selection (ctrl-alt) crashes konsole (assert failure) nearly every time.

Backtrace:
Application: Konsole (konsole), signal SIGABRT
0x00000031832a63c1 in nanosleep () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f09224c17e0 (LWP 25368))]

Thread 2 (Thread 0x41307950 (LWP 25398)):
#0  0x00000031832dcc02 in select () from /lib64/libc.so.6
#1  0x00000000059db64f in QProcessManager::run (this=0x1d03520) at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/io/qprocess_unix.cpp:307
#2  0x000000000590cdd6 in QThreadPrivate::start (arg=0x1d03520) at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/thread/qthread_unix.cpp:190
#3  0x0000003183e0729a in start_thread () from /lib64/libpthread.so.0
#4  0x00000031832e439d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f09224c17e0 (LWP 25368)):
[KCrash Handler]
#5  0x0000003183232215 in raise () from /lib64/libc.so.6
#6  0x0000003183233d83 in abort () from /lib64/libc.so.6
#7  0x000000318322b039 in __assert_fail () from /lib64/libc.so.6
#8  0x000000000018feb9 in Konsole::Screen::copyLineToStream (this=0x1dfec60, line=2, start=38, count=-4, decoder=0x7fff2bbe3db0, appendNewLine=true, preserveLineBreaks=true)
    at /usr/local/src/kde/svn/trunk/kdebase/apps/konsole/src/Screen.cpp:1245
#9  0x000000000018ffd0 in Konsole::Screen::writeSelectionToStream (this=0x1dfec60, decoder=0x7fff2bbe3db0, preserveLineBreaks=<value optimized out>)
    at /usr/local/src/kde/svn/trunk/kdebase/apps/konsole/src/Screen.cpp:1189
#10 0x00000000001901b5 in Konsole::Screen::selectedText (this=0x1dfec60, preserveLineBreaks=6) at /usr/local/src/kde/svn/trunk/kdebase/apps/konsole/src/Screen.cpp:1149
#11 0x0000000000190a90 in Konsole::ScreenWindow::selectedText (this=<value optimized out>, preserveLineBreaks=6) at /usr/local/src/kde/svn/trunk/kdebase/apps/konsole/src/ScreenWindow.cpp:120
#12 0x00000000001af2d2 in Konsole::TerminalDisplay::mouseReleaseEvent (this=0x1f5ba00, ev=0x7fff2bbe4830) at /usr/local/src/kde/svn/trunk/kdebase/apps/konsole/src/TerminalDisplay.cpp:2010
#13 0x00007f092323358b in QWidget::event (this=0x1f5ba00, event=0x7fff2bbe4830) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qwidget.cpp:7021
#14 0x00000000001aedcb in Konsole::TerminalDisplay::event (this=0x1f5ba00, e=0x7fff2bbe4830) at /usr/local/src/kde/svn/trunk/kdebase/apps/konsole/src/TerminalDisplay.cpp:2528
#15 0x00007f09231dbfe1 in QApplicationPrivate::notify_helper (this=0x1cf7810, receiver=0x1f5ba00, e=0x7fff2bbe4830) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qapplication.cpp:3800
#16 0x00007f09231dcbcd in QApplication::notify (this=0x7fff2bbe5780, receiver=0x1f5ba00, e=0x7fff2bbe4830) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qapplication.cpp:3527
#17 0x0000000000a1ee1b in KApplication::notify (this=0x7fff2bbe5780, receiver=0x1f5ba00, event=0x7fff2bbe4830) at /usr/local/src/kde/svn/trunk/kdelibs/kdeui/kernel/kapplication.cpp:307
#18 0x00000000059f6f2b in QCoreApplication::notifyInternal (this=0x7fff2bbe5780, receiver=0x1f5ba00, event=0x7fff2bbe4830)
    at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/kernel/qcoreapplication.cpp:587
#19 0x00007f09231e8121 in QCoreApplication::sendSpontaneousEvent (receiver=0x1f5ba00, event=0x7fff2bbe4830) at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/kernel/qcoreapplication.h:218
#20 0x00007f09231e087d in QApplicationPrivate::sendMouseEvent (receiver=0x1f5ba00, event=0x7fff2bbe4830, alienWidget=0x1f5ba00, nativeWidget=0x1d5f900, buttonDown=0x7f0923be0368, 
    lastMouseReceiver=@0x7f0923be0370) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qapplication.cpp:2792
#21 0x00007f0923250bd3 in QETWidget::translateMouseEvent (this=0x1d5f900, event=0x7fff2bbe5300) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qapplication_x11.cpp:4048
#22 0x00007f0923251a03 in QApplication::x11ProcessEvent (this=0x7fff2bbe5780, event=0x7fff2bbe5300) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qapplication_x11.cpp:3044
#23 0x00007f092327b31a in x11EventSourceDispatch (s=0x1cfaaa0, callback=0, user_data=0x0) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:148
#24 0x00000030ab8374db in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#25 0x00000030ab83acbd in ?? () from /lib64/libglib-2.0.so.0
#26 0x00000030ab83ae7b in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#27 0x0000000005a23b16 in QEventDispatcherGlib::processEvents (this=0x1cf5f20, flags={i = 733894080}) at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:325
#28 0x00007f092327ab3f in QGuiEventDispatcherGlib::processEvents (this=0x1cf5f20, flags={i = 733894176}) at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:204
#29 0x00000000059f4193 in QEventLoop::processEvents (this=0x7fff2bbe56d0, flags={i = 733894272}) at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#30 0x00000000059f438e in QEventLoop::exec (this=0x7fff2bbe56d0, flags={i = 733894368}) at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#31 0x00000000059f7790 in QCoreApplication::exec () at /usr/local/src/kde/svn/trunk/qt-copy/src/corelib/kernel/qcoreapplication.cpp:849
#32 0x00007f09231dbd3e in QApplication::exec () at /usr/local/src/kde/svn/trunk/qt-copy/src/gui/kernel/qapplication.cpp:3330
#33 0x00000000001d0f4c in kdemain (argc=1, argv=0x7fff2bbe59e8) at /usr/local/src/kde/svn/trunk/kdebase/apps/konsole/src/main.cpp:100
#34 0x000000318321e32a in __libc_start_main () from /lib64/libc.so.6
#35 0x00000000004007a9 in _start ()
Comment 1 Robert Knight 2008-09-22 04:10:50 UTC
Fixed - normalize selection in column mode. 
Comment 2 Matthew Woehlke 2008-09-22 22:00:52 UTC
...does indeed seem to be working with today's build, thank you!