Fix crash when creating a block selection (with Ctrl+Alt pressed) by dragging right-to-left.  Normalize the selection in Screen::setSelectionEnd() so that in column mode, column(sel_TL) <= column(sel_BR)

BUG:171187


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=863361